--- a/css/style.css
+++ b/css/style.css
@@ -173,4 +173,8 @@ font-family:Arial, Helvetica, sans-serif;
         font-size: 0.9em;
         color: #888;
       }
+
+      img{width: 100%;
+        max-width: 1000px;
+   }
       
