--- a/css/noticias.css
+++ b/css/noticias.css
@@ -22,9 +22,8 @@
 }
 
 .imagen-texto img {
-  max-width: 500px;
   height: auto;
-  border-radius: 8px; /* Opcional */
+  border-radius: 8px; 
 }
 
 .texto-derecha {
